[build-system]
requires = [
    "setuptools", 
    "wheel", 
    "numpy", 
    "meson>=0.64.0",        #build-time only
    "ninja",                #build-time only
    "meson-python>=0.13.0"  #build-time only
]
build-backend = "mesonpy"

[project]
name = "wannier-tools"
version = "0.0.2"
description = "A Python wrapper for the WannierTools code"
authors = [
    { name = "QuanSheng Wu", email = "wuquansheng@gmail.com" },
    { name = "ShengNan Zhang" },
    { name = "Hai-Feng Song" },
    { name = "Matthias Troyer" },
    { name = "Alexey A. Soluyanov" },
]
maintainers = [
    { name = "QuanSheng Wu", email = "wuquansheng@gmail.com" }
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.scripts]
wt-py = "wannier_tools.cli:main"
wt-check-deps = "wannier_tools.check_deps:main"

[project.urls]
Homepage = "https://www.wanniertools.com/"
"Bug Tracker" = "https://github.com/quanshengwu/wannier_tools/issues"

[tool.meson-python.args]
install = ["--tags=python-runtime,extension,devel,runtime,data"] 

#[tool.setuptools.packages.find]
#where = ["src"]
#namespaces = true

#[tool.setuptools.package-data]
#"wannier_tools.internal_mpi" = ["**/*"]

# cibuildwheel配置
[tool.cibuildwheel]
# 构建哪些版本
build = ["cp39-*"]
# 跳过哪些版本
skip = ["pp*", "*musllinux*"]

# 测试设置
test-command = [
    "python -c \"import wannier_tools; print('Import successful')\"",
    "python -c \"import wannier_tools; print('Version:', wannier_tools.__version__)\"",
    "python -c \"print('=== Testing wheel import and basic functionality ==='); import wannier_tools; print(f'Package location: {wannier_tools.__file__}'); print(f'Available modules: {[attr for attr in dir(wannier_tools) if not attr.startswith(\\\"_\\\")]}')\""
]
test-requires = ["pytest"]

# 环境变量在各平台特定配置中设置

# Linux特定配置
[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "wanniertools-builder-nompi"
environment = { FFLAGS = "-fallow-invalid-boz -fbackslash -ffree-line-length-none -fallow-argument-mismatch" }
before-build = [
    "echo 'Building Linux wheels with MPICH runtime MPI detection'",
    "echo 'Available Python versions:'",
    "ls /opt/python/",
    "echo 'Parallel build configuration:'",
    "echo 'Available CPU cores:' $(nproc)",
    "echo 'MAKEFLAGS:' $MAKEFLAGS"
]

# macOS特定配置 - 支持三种架构
[tool.cibuildwheel.macos] 
# macOS build environment is configured in CI workflow for better control
archs = ["x86_64", "arm64"]
environment = { MAKEFLAGS = "-j$(sysctl -n hw.ncpu)", NINJA_STATUS = "[%f/%t] " }

# Windows特定配置
[tool.cibuildwheel.windows]
archs = ["AMD64"]
environment = { FC = "C:\\\\msys64\\\\ucrt64\\\\bin\\\\gfortran.exe", CC = "C:\\\\msys64\\\\ucrt64\\\\bin\\\\gcc.exe", CXX = "C:\\\\msys64\\\\ucrt64\\\\bin\\\\g++.exe", FFLAGS = "-fallow-invalid-boz -fbackslash -ffree-line-length-none -fallow-argument-mismatch -O2", CFLAGS = "-O2", CXXFLAGS = "-O2", LDFLAGS = "-LC:\\\\msys64\\\\ucrt64\\\\lib -Wl,--allow-multiple-definition", OPENBLAS_NUM_THREADS = "1", OMP_NUM_THREADS = "1", MKL_NUM_THREADS = "1", BLAS = "None", LAPACK = "None", PATH = "C:\\\\msys64\\\\ucrt64\\\\bin;${PATH}" }
before-build = [
    "windows_setup.bat",
    "python -c \"",
    "import zipfile, tempfile, shutil, os",
    "from pathlib import Path",
    "",
    "# 找到修复后的wheel文件",
    "dest_dir = Path(r'{dest_dir}')",
    "wheel_file = next(dest_dir.glob('*.whl'))",
    "print(f'Processing wheel: {wheel_file}')",
    "",
    "# 创建临时目录",
    "with tempfile.TemporaryDirectory() as temp_dir:",
    "    temp_path = Path(temp_dir)",
    "    ",
    "    # 解压wheel",
    "    with zipfile.ZipFile(wheel_file, 'r') as z:",
    "        z.extractall(temp_path)",
    "    ",
    "    # 创建MPI目录结构",
    "    mpi_dir = temp_path / 'wannier_tools' / 'internal_mpi' / 'windows_amd64'",
    "    (mpi_dir / 'bin').mkdir(parents=True, exist_ok=True)",
    "    (mpi_dir / 'lib').mkdir(parents=True, exist_ok=True)",
    "    (mpi_dir / 'include').mkdir(parents=True, exist_ok=True)",
    "    ",
    "    # Microsoft MPI 标准安装路径 (DLL only)",
    "    msmpi_bin_path = Path('C:/Program Files/Microsoft MPI/Bin')",
    "    if not msmpi_bin_path.exists():",
    "        msmpi_bin_path = Path('C:/Program Files (x86)/Microsoft MPI/Bin')",
    "    if not msmpi_bin_path.exists():",
    "        msmpi_bin_path = Path('C:/Windows/System32')",
    "    ",
    "    print(f'Using MS-MPI DLL from: {msmpi_bin_path.parent}')",
    "    ",
    "    # 复制 msmpi.dll 到 wheel 的 internal_mpi/bin 目录",
    "    msmpi_dll_file = msmpi_bin_path / 'msmpi.dll'",
    "    if msmpi_dll_file.exists():",
    "        shutil.copy2(msmpi_dll_file, mpi_dir / 'bin')",
    "        print(f'Copied msmpi.dll to: {mpi_dir / 'bin'}')",
    "    else:",
    "        print('[WARNING] msmpi.dll not found in expected location. MPI features may not work.')",
    "    ",
    "    # 重新打包wheel",
    "    with zipfile.ZipFile(wheel_file, 'w', zipfile.ZIP_DEFLATED) as z:",
    "        for file_path in temp_path.rglob('*'):",
    "            if file_path.is_file():",
    "                arcname = file_path.relative_to(temp_path)",
    "                z.write(file_path, arcname)",
    "    ",
    "    print(f'✅ MS-MPI DLL injected into {wheel_file.name}')",
    "\"",
    "echo === Final wheel contents ==="
]